feat($spring-thymeleaf): mapstruct with kotlin